fix: make deprecated tag visible again

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -86,3 +86,12 @@ a:hover {
   color: unset;
   text-decoration: underline;
 }
+
+deprecated::after {
+  content: 'deprecated';
+  font-size: 12px;
+  padding: 3px 5px;
+  border-radius: 10px;
+  color: var(--text-secondary);
+  background-color: #202b3b;
+}
